<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bac_ground_1"
    android:columnCount="2"
    android:rowCount="5"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/gasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_textview"
        android:text="@string/gas_textview"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/valGasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_textview"
        android:text="@string/valor_atual_gasolina"
        android:textColor="@android:color/background_light" />

    <SeekBar
        android:id="@+id/gasSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:background="@color/background_seekbar"
        android:max="100"
        android:padding="@dimen/value_textview"
        android:progress="0" />

    <TextView
        android:id="@+id/etanolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_textview"
        android:text="@string/etanol_textview"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/valEtanolTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/value_textview"
        android:text="@string/valor_atual_etanol"
        android:textColor="@android:color/background_light" />

    <SeekBar
        android:id="@+id/etanolSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/background_seekbar"
        android:max="100"
        android:padding="@dimen/value_textview"
        android:progress="0" />

    <ImageView
        android:id="@+id/imgPtincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_rowSpan="2"
        app:srcCompat="@drawable/gasolina" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/better_label"
        android:textColorHint="@android:color/background_light"
        app:boxCornerRadiusBottomLeft="2dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/bestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_seekbar"
            android:focusable="false"
            android:text="@string/better_option" />
    </android.support.design.widget.TextInputLayout>

</GridLayout>